--- a/front-end-resources/package.json
+++ b/front-end-resources/package.json
@@ -12,7 +12,5 @@
   ],
   "author": "Bruce Hong",
   "license": "UNLICENSED",
-  "dependencies": {
-    "canvas-tile-map": "0.0.3"
-  }
+  "dependencies": {}
 }
